# Rivanna3

./: .gitignore  CMakeLists.txt  README.md  compile.py  compile.sh  compile_commands.json  compile_upload.md  custom_targets.json  dev_guide.md  hil_config.json  mbed_app.json  monitor.py  static_analysis.py  upload.py
.github/workflows/: Compile_Check.yaml  compile.yaml
BatteryBoard/include/: pindef.h
Common/: CMakeLists.txt  temp.txt  temp2.txt
Common/include/: AUXBATTERYCANStructs.h  BPSCANStructs.h  CANInterface.h  CANStructMessageIDs.h  CANStructs.h  ChargingModeCANStruct.h  DashboardCommandsCANStruct.h  ECUCANStructs.h  HeartBeatCANStruct.h  HeartBeatSystem.h  HeartbeatCANStruct.h  MSGID_0X106CANStruct.h  MSGID_0X406CANStruct.h  MainCANInterface.h  MotorCommandsCANStruct.h  MotorControllerCANStructs.h  PowerAuxCANStructs.h
Common/src/: CANInterface.cpp  HeartBeat.cpp  HeartBeatSystem.cpp  MainCANInterface.cpp
DisplayScreen/: .mxproject  .project
DisplayScreen/Core/Inc/: app_freertos.h
DisplayScreen/Core/Src/: main.c  stm32u5xx_hal_msp.c
DisplayScreen/STM32CubeIDE/: .project  Riverdi_50STM32U5A9.launch
DisplayScreen/STM32CubeIDE/Debug/: Riverdi_50STM32U5A9.map  makefile  objects.list
DisplayScreen/TouchGFX/: solar_car_display.touchgfx
DisplayScreen/config/gcc/: app.mk
DisplayScreen/lib/include/: WheelCANInterface.h
DisplayScreen/simulator/msvs/: Application.vcxproj.filters
DriverBoard/include/: pindef.h
DriverBoard/src/: main.cpp
DriverBoard/tests/: test.py
PowerBoard/: CMakeLists.txt
PowerBoard/include/: main.h  pindef.h
PowerBoard/lib/: CMakeLists.txt
PowerBoard/lib/include/: AUXBattery.h  CruiseControl.h  MotorInterface.h  PowerCANInterface.h  Precharge.h  ReadFiles.h  ReadPedals.h
PowerBoard/lib/src/: AUXBattery.cpp  CruiseControl.cpp  MotorControllerCANInterface.cpp  MotorInterface.cpp  PowerCANInterface.cpp  Precharge.cpp  ReadPedals.cpp
PowerBoard/lib/src/DriverBoardOld/: DriverCANInterface.cpp  DriverCANInterface.h  main.cpp
PowerBoard/src/: main.cpp
PowerBoard/tests/: test.py  test_reset_can.py  testcase_example.py
TARGET_POWER_BOARD/: CMakeLists.txt  PeripheralPins.c  PinNames.h
TARGET_UVA_SOLAR_CAR/: CMakeLists.txt  system_clock.c
TARGET_WHEEL_BOARD/: CMakeLists.txt  PeripheralPins.c  PinNames.h  system_clock.c
TESTS/DriverBoard/: main.cpp
TelemetryBoard/: CMakeLists.txt
TelemetryBoard/include/: pindef.h
TelemetryBoard/lib/: CMakeLists.txt
TelemetryBoard/src/: main.cpp
WheelBoard/: CMakeLists.txt
WheelBoard/display/: MyApplication_2.touchgfx  application.config
WheelBoard/display/assets/texts/: texts.xml
WheelBoard/display/config/msvs/: Application.props
WheelBoard/display/gui/src/screen1_2_screen/: Screen1_2Presenter.cpp
WheelBoard/display/gui/src/screen1_screen/: Screen1View.cpp
WheelBoard/display/lib/src/: WheelCANInterface.cpp
WheelBoard/display/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
WheelBoard/include/: pindef.h
WheelBoard/lib/: CMakeLists.txt
WheelBoard/lib/include/: WheelCANInterface.h
WheelBoard/lib/src/: WheelCANInterface.cpp
WheelBoard/src/: main.cpp
WheelBoard/touchgfx/: CMakeLists.txt  Riverdi_50STM32U5A9.ioc  backup_Riverdi_50STM32U5A9.ioc
WheelBoard/touchgfx/Core/Inc/: FreeRTOSConfig.h  stm32u5xx_hal_conf.h
WheelBoard/touchgfx/Core/Src/: app_freertos.c  fdcan.c
WheelBoard/touchgfx/Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_ll_adc.h  stm32u5xx_ll_rcc.h
WheelBoard/touchgfx/Middlewares/ST/touchgfx_components/gpu2d/TouchGFXNema/include/touchgfx_nema/: BuildVersion.hpp
WheelBoard/touchgfx/STM32CubeIDE/: .cproject  .project
WheelBoard/touchgfx/TouchGFX/: CMakeLists.txt  TouchGFX_Demo.touchgfx  application.config  solar_car_display.touchgfx  solar_car_display_backup.touchgfx
WheelBoard/touchgfx/TouchGFX/assets/texts/: texts.xml
WheelBoard/touchgfx/TouchGFX/config/gcc/: app.mk
WheelBoard/touchgfx/TouchGFX/config/msvs/: Application.props
WheelBoard/touchgfx/TouchGFX/gui/include/gui/camera_screen/: cameraPresenter.hpp  cameraView.hpp
WheelBoard/touchgfx/TouchGFX/gui/include/gui/conf_screen/: confPresenter.hpp  confView.hpp
WheelBoard/touchgfx/TouchGFX/gui/include/gui/graph_screen/: graphPresenter.hpp  graphView.hpp
WheelBoard/touchgfx/TouchGFX/gui/include/gui/logo_screen/: logoView.hpp
WheelBoard/touchgfx/TouchGFX/gui/include/gui/main_screen/: mainPresenter.hpp  mainView.hpp
WheelBoard/touchgfx/TouchGFX/gui/include/gui/map_screen/: mapPresenter.hpp  mapView.hpp
WheelBoard/touchgfx/TouchGFX/gui/include/gui/notifications_screen/: notificationsPresenter.hpp  notificationsView.hpp
WheelBoard/touchgfx/TouchGFX/gui/src/camera_screen/: cameraPresenter.cpp  cameraView.cpp
WheelBoard/touchgfx/TouchGFX/gui/src/conf_screen/: confPresenter.cpp  confView.cpp
WheelBoard/touchgfx/TouchGFX/gui/src/graph_screen/: graphPresenter.cpp  graphView.cpp
WheelBoard/touchgfx/TouchGFX/gui/src/logo_screen/: logoPresenter.cpp
WheelBoard/touchgfx/TouchGFX/gui/src/main_screen/: mainPresenter.cpp  mainView.cpp
WheelBoard/touchgfx/TouchGFX/gui/src/map_screen/: mapPresenter.cpp  mapView.cpp
WheelBoard/touchgfx/TouchGFX/gui/src/notifications_screen/: notificationsPresenter.cpp  notificationsView.cpp
WheelBoard/touchgfx/TouchGFX/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
WheelBoard/touchgfx/assets/texts/: texts.xml
WheelBoard/touchgfx/gui/include/gui/logo_screen/: logoPresenter.hpp
WheelBoard/touchgfx/gui/include/gui/screen1_2_screen/: Screen1_2View.hpp
WheelBoard/touchgfx/gui/include/gui/screen1_screen/: Screen1View.hpp
WheelBoard/touchgfx/lib/include/: DisplayScreenCANInterface.h
WheelBoard/touchgfx/lib/src/: DisplayScreenCANInterface.cpp
WheelBoard/touchgfx/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
WheelBoard/touchgfx/src/: main.cpp
WheelBoard/touchgfx_demo/Core/Src/: stm32u5xx_hal_timebase_tim.c
WheelBoard/touchgfx_demo/STM32CubeIDE/: .project
WheelBoard/touchgfx_demo/TouchGFX/: touchgfx_demo.touchgfx
WheelBoard/touchgfx_demo/TouchGFX/assets/texts/: texts.xml
(+313 files in other folders)
